--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -5,6 +5,7 @@
   {% set css %}
     {% include "assets/css/layout.css" %}
     {% include "assets/css/inline.css" %}
+    {% include "assets/css/highlight.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
   {% set js %}
