--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -6,6 +6,7 @@
     {% include "assets/css/layout.css" %}
     {% include "assets/css/inline.css" %}
   {% endset %}
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
   <style>{{ css | cssmin | safe }}</style>
   {% set js %}
     {% include "assets/js/inline.js" %}
