--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -66,7 +66,6 @@ footer {
 }
 
 h1 {
-  font-style: italic;
   font-size: xx-large;
   line-height: 1.15;
   padding-bottom: 0.25em;
@@ -99,7 +98,7 @@ h6 {
 small,
 nav {
   color: var(--color-text-dim);
-  font-family: var(--font-sans);
+  font-family: var(--font-mono);
   font-size: smaller;
 }
 
