--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -108,7 +108,6 @@ blockquote {
 }
 
 pre {
-  font-size: 100%;
   background-color: var(--color-divider);
   direction: ltr;
   text-align: left;
@@ -121,8 +120,8 @@ pre {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  padding: 2em;
-  margin: 1em -2em;
+  padding: 1em;
+  margin: 1em 0;
 }
 code {
   font-family: var(--font-mono);
