--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -64,7 +64,7 @@
     --color-text-dimmer: var(--color8);
     --color-divider: var(--color8);
     --color-container: var(--background);
-    --color-link: var(--color6);
+    --color-link: var(--color14);
     --color-keyword: var(--color11);
   }
 }
@@ -76,7 +76,7 @@ body {
   font-family: var(--font-sans);
   line-height: 1.5;
   color: var(--color-text);
-  padding: 1em;
+  margin: 1rem;
 }
 
 h1,
@@ -97,8 +97,8 @@ h1 {
   font-size: xx-large;
   font-weight: 400;
   line-height: 1.15;
-  padding-bottom: 0.25em;
-  margin-bottom: 0.25em;
+  padding-bottom: 0.25rem;
+  margin-bottom: 0.25rem;
   border-bottom: 1px solid var(--color-divider);
 }
 h2 {
@@ -148,10 +148,10 @@ pre {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  padding: 0.75em 0;
-  margin: 1em 0;
+  padding: 0.75rem 0;
+  margin: 1rem 0;
   line-height: 1.25;
-  font-size: smaller;
+  /* font-size: smaller; */
   border-top: 1px dashed var(--color-divider);
   border-bottom: 1px dashed var(--color-divider);
 }
@@ -188,7 +188,7 @@ header > em {
   color: var(--color-text);
   font-weight: normal;
   font-style: normal;
-  margin: 0.5em 0;
+  margin: 0.5rem 0;
 }
 
 header nav {
@@ -197,7 +197,7 @@ header nav {
 }
 header nav ul {
   padding: 0;
-  margin: 0.5em 0;
+  margin: 0.5rem 0;
 }
 header nav li {
   display: inline-block;
@@ -214,7 +214,7 @@ header nav li a[data-current="current item"] {
 /* POSTS LIST AND ARTICLE */
 
 main > section > article {
-  margin-bottom: 2em;
+  margin-bottom: 2rem;
 }
 main > section > article > h3 {
   margin-bottom: 0;
@@ -225,7 +225,7 @@ main > section > article > nav > a {
 }
 
 main header {
-  margin-bottom: 2em;
+  margin-bottom: 2rem;
 }
 
 main header small {
@@ -250,17 +250,17 @@ img {
 /* Article Containers */
 
 article .note {
-  margin: 2em 0;
+  margin: 2rem 0;
   font-size: smaller;
   color: var(--color-text-dim);
   background-color: var(--color-container);
-  padding: 0.75em 1em;
+  padding: 0.75rem 1rem;
 }
 article .note::before {
   content: "Note";
   display: inline-block;
-  padding-bottom: 0.5em;
-  margin-bottom: 0.25em;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
   border-bottom: 1px solid var(--color2);
   font-weight: 500;
   color: var(--color10);
@@ -280,6 +280,6 @@ a[rel="tag"]:hover {
 
 @media screen and (min-width: 768px) {
   body {
-    font-size: 110%;
+    /* font-size: 110%; */
   }
 }
