--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -148,10 +148,9 @@ pre {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  padding: 0.75rem 0;
+  padding: 1rem 0;
   margin: 1rem 0;
   line-height: 1.25;
-  /* font-size: smaller; */
   border-top: 1px dashed var(--color-divider);
   border-bottom: 1px dashed var(--color-divider);
 }
@@ -250,21 +249,22 @@ img {
 /* Article Containers */
 
 article .note {
-  margin: 2rem 0;
+  margin: 1rem 0;
   font-size: smaller;
-  color: var(--color-text-dim);
-  background-color: var(--color-container);
-  padding: 0.75rem 1rem;
+  font-style: italic;
+  color: var(--color4);
+  /* background-color: var(--color-container); */
+  /* padding: 0.75rem 1rem; */
 }
 article .note::before {
   content: "Note";
-  display: inline-block;
-  padding-bottom: 0.5rem;
-  margin-bottom: 0.25rem;
-  border-bottom: 1px solid var(--color2);
+  display: block;
+  /* margin-bottom: 0.5rem; */
   font-weight: 500;
-  color: var(--color10);
-  line-height: 1;
+  color: var(--color12);
+}
+article .note :last-child {
+  margin-bottom: 0;
 }
 
 /* Post Tags */
