--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
-  <small>
-    — <a href="https://twitter.com/kkga_">@kkga_</a>
-  </small>
+  <!-- <small> -->
+  <!--   — <a href="https://twitter.com/kkga_">@kkga_</a> -->
+  <!-- </small> -->
 </footer>
