--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -8,7 +8,7 @@
     {% include "assets/css/prism.css" %}
     {% include "assets/css/highlight.css" %}
   {% endset %}
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,400i,500,500i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans+Condensed:400,400i,500,500i&display=swap" rel="stylesheet">
   <style>{{ css | cssmin | safe }}</style>
   {% set js %}
     {% include "assets/js/inline.js" %}
