--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -19,31 +19,32 @@
   --color7: #6c6c6c;
   --color15: #ffffff;
 
-  --color-body: var(--l-00);
-  --color-text: var(--l-10);
-  --color-text-dim: var(--l-07);
-  --color-text-dimmer: var(--l-03);
-  --color-divider: var(--l-02);
+  --color-body: var(--color15);
+  --color-text: var(--color0);
+  --color-text-dim: var(--color7);
+  --color-text-dimmer: var(--color0);
+  --color-divider: var(--color0);
+  --color-keyword: var(--color-text);
 
-  --font-mono: "SF Mono", "Menlo", "DejaVu Sans Mono",
-    "Bitstream Vera Sans Mono", Courier, monospace;
-  --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  --font-serif: Charter, Georgia, serif;
+  --font-mono: "Iosevka Aile";
+  /* --font-mono: "Iosevka Extended"; */
+  --font-sans: var(--font-mono);
+  --font-serif: var(--font-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-body: var(--color0);
-    --color-text: var(--foreground);
-    --color-text-dim: var(--color7);
-    --color-text-dimmer: var(--color8);
-    --color-divider: var(--color8);
-    --color-container: var(--background);
-    --color-link: var(--color14);
-    --color-keyword: var(--color11);
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   :root { */
+/*     --color-body: var(--background); */
+/*     --color-text: var(--foreground); */
+/*     --color-bright: var(--color15); */
+/*     --color-text-dim: var(--color7); */
+/*     --color-text-dimmer: var(--foreground); */
+/*     --color-divider: var(--color7); */
+/*     --color-container: var(--background); */
+/*     --color-link: var(--foreground); */
+/*     --color-keyword: var(--foreground); */
+/*   } */
+/* } */
 
 /* TYPOGRAPHY */
 
@@ -51,6 +52,7 @@ body {
   background-color: var(--color-body);
   font-family: var(--font-sans);
   line-height: 1.5;
+  font-size: 16px;
   color: var(--color-text);
   margin: 0.75rem;
 }
@@ -64,36 +66,33 @@ h6,
 header,
 nav,
 footer {
+  font-size: 100%;
   font-family: var(--font-sans);
-  color: var(--color15);
 }
 
 h1 {
-  font-size: xx-large;
-  line-height: 1.25;
   margin: 0;
-  padding-bottom: 0.25rem;
-  margin-bottom: 0.25rem;
-  border-bottom: 1px dashed var(--color-divider);
+  font-weight: bold;
+  text-transform: uppercase;
 }
 h2 {
-  font-size: x-large;
-  line-height: 1.25;
-  margin: 1rem 0 1rem;
+  margin: 2rem 0 1rem;
+  padding: 1rem 0;
+  text-transform: uppercase;
+  border-bottom: 3px double;
 }
 h3 {
-  margin: 1rem 0 1rem;
-  margin-bottom: 0;
-  font-size: medium;
-  line-height: 1.5;
+  margin: 2rem 0 1rem;
+  padding: 1rem 0;
+  border-bottom: 1px solid;
 }
 h4 {
-  margin: 1rem 0 1rem;
-  font-size: small;
+  margin: 2rem 0 1rem;
+  /* font-size: small; */
   text-transform: uppercase;
 }
 h5 {
-  margin: 1rem 0 1rem;
+  margin: 2rem 0 1rem;
   font-size: x-small;
   text-transform: uppercase;
 }
@@ -102,29 +101,32 @@ h6 {
   font-size: x-small;
 }
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 small {
-  color: var(--color-text-dim);
-  /* font-family: var(--font-mono); */
-  font-size: smaller;
-}
-
-nav {
-  color: var(--color-text-dim);
-  font-family: var(--font-sans);
-  font-size: smaller;
+  font-size: 100%;
 }
 
 blockquote {
-  font-style: italic;
   margin-right: 0;
+  margin-left: 0;
+  padding-left: 2rem;
+  border-left: 1px solid;
+}
+
+ul {
+  padding-left: 1rem;
+}
+hr {
+  margin: 2rem 0;
+  border: none;
+  border-bottom: 1px solid var(--color-divider);
 }
 
 pre {
-  font-size: smaller;
+  margin: 2rem 0;
+  /* font-size: smaller; */
   direction: ltr;
   text-align: left;
   white-space: pre;
@@ -144,9 +146,8 @@ code {
 }
 :not(pre) > code {
   color: var(--color-keyword);
-  background: var(--color8);
   padding: 0 2px;
-  border-radius: 2px;
+  outline: 1px dotted;
 }
 
 /* LINKS */
@@ -164,32 +165,35 @@ a:hover {
 nav a:not(:hover),
 footer a:not(:hover),
 small a:not(:hover) {
-  color: var(--color-text-dim);
   text-decoration: none;
 }
 
 /* HEADER */
 
 body > header {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  margin-bottom: 1rem;
+  /* display: flex; */
+  /* align-items: baseline; */
+  /* justify-content: space-between; */
+  margin-bottom: 4rem;
 }
 header > em {
-  color: var(--color-text-dim);
   font-weight: normal;
   font-style: normal;
-  font-size: smaller;
+  display: inline-block;
+  display: none;
+}
+header > em::after {
+  content: "\a0|\a0";
 }
 
 header nav {
   text-transform: lowercase;
+  display: inline-block;
 }
 header nav ul {
   padding: 0;
   margin: 0;
-  text-align: right;
+  /* text-align: right; */
 }
 header nav li {
   display: inline-block;
@@ -212,24 +216,18 @@ main {
 }
 
 main > section > article:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid;
 }
 main > section > article > h3 {
-  font-size: 1rem;
-  /* color: var(--color-text); */
-  margin-bottom: 0;
-  line-height: inherit;
-}
-main > section > article > p {
-  font-size: smaller;
-  color: var(--color-text-dim);
-}
-main > section > article > nav > a {
-  color: var(--color-text-dim);
+  margin: 0;
+  border: none;
+  padding: 0;
 }
 
 main header {
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
 }
 
 main header small {
@@ -237,10 +235,7 @@ main header small {
 }
 
 main header p {
-  font-size: larger;
-  margin: 1rem 0;
-  font-family: var(--font-sans);
-  color: var(--color-text-dim);
+  margin: 2rem 0;
 }
 
 main > section > article > * {
