--- a/_includes/assets/css/fonts.css
+++ b/_includes/assets/css/fonts.css
@@ -1,20 +1,27 @@
 @font-face {
-  font-family: "Iosevka Etoile Web";
+  font-family: "Iosevka Aile Web";
   font-weight: 400;
   font-style: normal;
-  src: url("/static/fonts/iosevka-etoile-regular.woff2") format("woff2");
+  src: url("/static/fonts/iosevka-aile-regular.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: "Iosevka Etoile Web";
+  font-family: "Iosevka Aile Web";
   font-weight: 400;
   font-style: italic;
-  src: url("/static/fonts/iosevka-etoile-italic.woff2") format("woff2");
+  src: url("/static/fonts/iosevka-aile-italic.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: "Iosevka Etoile Web";
+  font-family: "Iosevka Aile Web";
   font-weight: 700;
   font-style: normal;
-  src: url("/static/fonts/iosevka-etoile-bold.woff2") format("woff2");
+  src: url("/static/fonts/iosevka-aile-bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Iosevka Web";
+  font-weight: 400;
+  font-style: normal;
+  src: url("/static/fonts/iosevka-regular.woff2") format("woff2");
 }
