--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,18 +3,20 @@ layout: layouts/base.njk
 section: page
 ---
 
-<header>
-  <h1>{{ title }}</h1>
+<header class="header">
+  <h1 class="header-title">{{ title }}</h1>
 
-  <small>
-    {% if subtext %}
-      {{ subtext }}
-      <span>&middot;</span>
-    {% endif %}
-    updated <time datetime="{{ page.date | machineDate }}">
+  {% if subtext %}
+  <span class="header-summary">
+    {{ subtext }}
+  </span>
+  {% endif %}
+
+  <span class="header-time">
+    updated: <time datetime="{{ page.date | machineDate }}">
       {{page.date | readableDate}}
       </time>
-  </small>
+  </span>
 </header>
 
 {{ layoutContent | safe }}
