--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -39,7 +39,7 @@
 body {
   background-color: var(--color-body);
   font-family: var(--font-sans);
-  /* line-height: 1.5; */
+  line-height: 1.5;
   font-size: 16px;
   color: var(--color-text);
   margin: 0.75rem;
