--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -54,17 +54,18 @@ h6,
 header,
 nav,
 footer {
-  font-size: 100%;
   font-family: var(--font-sans);
 }
 
 h1 {
   margin: 0;
   font-weight: bold;
+  font-size: x-large;
 }
 h2 {
   margin: 4rem 0 0.5rem;
   padding-bottom: 0.5rem;
+  font-size: large;
 }
 h2 + p {
   margin-top: 0;
@@ -259,34 +260,14 @@ header nav li a[data-current="current item"] {
 /* HEADER */
 
 .header {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: auto auto;
-  grid-template-areas:
-    "title time"
-    "summary summary";
-  padding: 0.5rem 0;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
   margin-bottom: 4rem;
-}
-.header-title {
-  grid-area: title;
-}
-.header-time {
-  grid-area: time;
-}
-.header-summary {
-  grid-area: summary;
 }
 
 .post-nav {
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
   justify-content: space-between;
   padding: 0.5rem 0;
   border-top: 1px solid;
-  border-bottom: 1px solid;
   margin-bottom: 4rem;
 }
 .post-tags {
